--- a/contact.html
+++ b/contact.html
@@ -197,7 +197,7 @@
                 	<!--form-box-->
                     <div class="form-box default-form">
                         <div class="contact-form default-form">
-                            <form method="post" action="https://formsubmit.co/todddeakron@outlook.com" id="contact-form">
+                            <form method="post" action="https://formsubmit.co/cwilsonphp@gmail.com" id="contact-form">
                                 <div class="row clearfix">
                                 
                                     <div class="form-group col-md-6 col-sm-6 col-xs-12">
