Updated phone number

--- a/service-annuities.html
+++ b/service-annuities.html
@@ -34,7 +34,7 @@
                 <div class="top-left pull-left">
                     <ul>
                         <li><span class="styled-font">Have any question? </span></li>
-                        <li><span class="fa fa-phone"></span> Phone +234-221-8872</li>
+                        <li><span class="fa fa-phone"></span> Phone 234-217-2781</li>
                         <li><span class="fa fa-envelope-o"></span> Mail@HealthCoach.com</li>                        
                     </ul>    
                 </div>
